# GroundEstimation

./: .gitignore  CMakeLists.txt  GroundEstimator.cpp  README.md  SYSUGroundEstimator.h  SYSUStereo.cpp  SYSUStereo.h  main-stereo.cpp  main.cpp
include/: Config.h  GroundEstimator.h  MatrixOp.h  RANSACPlane.h  SGMStereo.h  Visualizer.h
src/: GroundEstimator.cpp  MatrixOp.cpp  RansacPlane.cpp  SGMStereo.cpp  Visualizer.cpp  main.cpp
